# linnea

./: CHANGES.md  linnea_generate_programs.py  linnea_test.py  lookup.py  parse_programs.py  utils-bak.py
experiment-suite/: 01_generate_test_expressions.py  02_generate_experiment_script.py  03_gather_results.py  04_analyse.py  config_cluster.json  config_cpu.json
experiment-suite/logs/: 01_notes_comparision_with_henriks.txt  extract_ranking.py  get_graph.py
experiment-suite/templates/: runner.jl
linnea/code_generation/: utils.py
linnea/examples/: as01.py
test_julia/: ABC_inv.jl  Henriks_Experiment_Design.ipynb  Noise_analysis.ipynb  Noise_analysis_2.ipynb  Noise_analysis_3.ipynb  Noise_analysis_4_gemm_mnk.ipynb  Noise_analysis_5_matchain_mnk.ipynb  SampleSize_1.ipynb  SampleSize_2.ipynb  SampleSize_3_Variance_compare.ipynb  Sample_Size_Algorithm_Comparision.ipynb  Statistics.ipynb  batched_gemm.jl  blas2_blas1_compare.jl  blas3_blas2_compare.jl  chol_test.jl  diff_noise.jl  gemm_test.jl  log_noise.txt  matchain.jl  matchain_compare.jl  noise.jl  outerprod.jl  plot_noise.py  quantile.jl  quantile_matvec.jl  quantile_perf.txt  quantile_plus.jl  sleep_tests.ipynb  test.jl
test_julia/advanced_tests/: axpy_dist.jl  gemm_blas1_dist.jl  gemm_dist.jl  gemm_mnk.jl  gemm_mnk_random.jl  gemm_mnk_random_square.jl  matchain_compare.jl  matchain_dist.jl  matchain_mnkl.jl  matchain_tf.jl
test_julia/random42/Cpp/: CMakeLists.txt  operand_generator.hpp
test_julia/random42/Cpp/reference/: naive_armadillo.hpp  naive_eigen.hpp  recommended_armadillo.hpp  recommended_eigen.hpp
(+1298 files in other folders)
